# ChangeLog for media-video/avidemux
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/avidemux/ChangeLog,v 1.63 2005/02/21 11:18:13 zypher Exp $

*avidemux-2.0.38rc1 (20 Feb 2005)

  21 Feb 2005; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.38_rc1.ebuild:
  Version bump.

*avidemux-2.0.36 (12 Jan 2005)

  14 Jan 2005; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.36.ebuild:
  Version bump.

  14 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  avidemux-2.0.34_rc1-r1.ebuild, avidemux-2.0.34_rc2.ebuild:
  Using 'aac' instead of faad and faac.

*avidemux-2.0.34_rc2 (11 Dec 2004)

  12 Dec 2004; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.34_rc2.ebuild:
  Version bump, changed usage of mmx-flag to autodetect if not diabled.

  30 Nov 2004; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.34_rc1-r1.ebuild,
  Cleanup and addition of missing USE-flags, solves bug #72217.
  Thanks go to Diego Petteno for bug and suggested fix.

  26 Nov 2004; Chris White <chriswhite@gentoo.org> -avidemux-0.9-r1.ebuild,
  -avidemux-2.0.18.ebuild, -avidemux-2.0.20.ebuild, -avidemux-2.0.22.ebuild,
  -avidemux-2.0.26.ebuild, -avidemux-2.0.28.ebuild, -avidemux-2.0.30.ebuild,
  -avidemux-2.0.32.ebuild:
  Removed old ebuilds with permission from zypher.

  09 Nov 2004; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.34_rc1.ebuild:
  Version bump.

*avidemux-2.0.32 (26 Okt 2004)

  29 Okt 2004; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.32.ebuild:
  Version bump.
  
  19 Okt 2004; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.30.ebuild:
  Added amd64-patch, closes bug #68052.

*avidemux-2.0.30 (15 Okt 2004)

  17 Okt 2004; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.30.ebuild:
  Version bump.
  
  23 Sep 2004; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.26.ebuild,
  avidemux-2.0.28.ebuild:
  Added faad2 dependency, closes bug #59556
