@@ -2,11 +2,11 @@
 Hash: SHA1
 
 MD5 f334c41a1a1d4817b41fe11cf35eac21 avidemux-2.0.34_rc2.ebuild 2636
-MD5 62eb979e73dd6719f723c04b2c02837c avidemux-2.0.36.ebuild 2604
+MD5 3e7529efab3b4c2630ae395e30ca890f avidemux-2.0.36.ebuild 2604
 MD5 4c24428398acd26c384e724f5e2cd71a avidemux-2.0.24.ebuild 2482
 MD5 dc94855a01eb66b0d3c329e46eb85e76 avidemux-2.0.34_rc1-r1.ebuild 3078
-MD5 0ae0e37de5797539aba82e70b67ad9da ChangeLog 11543
-MD5 e3ae1330a3454fb05ea7dcd0e469c430 avidemux-2.0.38_rc1.ebuild 2684
+MD5 ad5d474ba782f2a80aed29ac7dbdff75 ChangeLog 11653
+MD5 07ec34f7b85bdce7aff93574b527d1c5 avidemux-2.0.38_rc1.ebuild 2684
 MD5 5846b93f88b88de1c06950c94bf09e21 avidemux-2.0.34_rc1.ebuild 2417
 MD5 955f56e990f8c32d705708b4cc4db089 metadata.xml 251
 MD5 f9121be7bae99c7b33f4140c70799dce files/digest-avidemux-2.0.34_rc2 71
@@ -27,9 +27,9 @@ MD5 a425235d45d2628fb39a2d5e336585be files/xvid.patch 672
 MD5 277683ec9bcbe17a0b7fea610eba9cfb files/avidemux-2.0.30_fixes.patch 1713
 MD5 82846937f7ffde09813d938fe907c5e7 files/digest-avidemux-2.0.36 68
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.2.6 (GNU/Linux)
+Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCGcPHRPjscZbntocRAmVfAJ9KKxnj9oRB0PfoS4CwlqHXhuhDcACdHQoQ
-DN+uh40hrkuhub3v22NhcmM=
-=/Kv6
+iD8DBQFCS8vARPjscZbntocRAjOnAJ0Qo/kQWzlVtYSG49RtIQtMeb+QJQCfZgFe
+Gzm1Kbdf8eBBb2Aiio/zwfI=
+=kpwl
 -----END PGP SIGNATURE-----
