@@ -1,6 +1,9 @@
 # ChangeLog for media-video/avidemux
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/avidemux/ChangeLog,v 1.63 2005/02/21 11:18:13 zypher Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/avidemux/ChangeLog,v 1.64 2005/03/31 10:06:31 zypher Exp $
+
+  31 Mar 2005; Marc Hildebrand <zypher@gentoo.org> avidemux-2.0.36.ebuild:
+  Fixed typo, closing bug #87380.
 
 *avidemux-2.0.38rc1 (20 Feb 2005)
 
